clusters/cl01tl/manifests/element-web/Deployment-element-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-web
  labels:
    helm.sh/chart: element-web-1.4.44
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
    app.kubernetes.io/version: "1.12.30"
    app.kubernetes.io/managed-by: Helm
  namespace: element-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: element-web
      app.kubernetes.io/instance: element-web
  template:
    metadata:
      annotations:
        checksum/config: f6c4e394a6953dc6b2a49d901bc984f040570f74f93d42b97d08036d77dc667f
        checksum/config-nginx: a3cff96ea096a393a981c1970134ec603818578a6b9ad17bc2275d6d7b92d375
      labels:
        app.kubernetes.io/name: element-web
        app.kubernetes.io/instance: element-web
    spec:
      serviceAccountName: element-web
      securityContext: {}
      containers:
        - name: element-web
          securityContext: {}
          image: "ghcr.io/element-hq/element-web:v1.12.30@sha256:3e7dbd4424de9e11c812bc740acf2725b2abe66ea0d0802023b56fd85d3fa09a"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
          volumeMounts:
            - mountPath: /app/config.json
              name: config
              subPath: config.json
            - mountPath: /etc/nginx/conf.d/config.json
              name: config-nginx
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: element-web
        - name: config-nginx
          configMap:
            name: element-web-nginx
