clusters/cl01tl/manifests/element-web/Pod-element-web-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "element-web-test-connection"
  labels:
    helm.sh/chart: element-web-1.4.44
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
    app.kubernetes.io/version: "1.12.30"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
  namespace: element-web
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['element-web:80']
  restartPolicy: Never
