clusters/cl01tl/manifests/element-web/Service-element-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-web
  labels:
    helm.sh/chart: element-web-1.4.44
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
    app.kubernetes.io/version: "1.12.30"
    app.kubernetes.io/managed-by: Helm
  namespace: element-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
