clusters/cl01tl/manifests/element-web/HTTPRoute-element-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element-web
  namespace: element-web
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Chat"
    gethomepage.dev/description: "Matrix"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "sh-element.webp"
    gethomepage.dev/siteMonitor: "http://element-web.element-web:80"
    gethomepage.dev/statusStyle: "dot"
    gethomepage.dev/weight: "200"
    gethomepage.dev/podSelector: ""
  labels:
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
    app.kubernetes.io/part-of: element-web
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - chat.alexlebens.dev
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: element-web
          port: 80
          weight: 1
